[package]
name = "advent_of_code_2022"
version = "0.1.0"
authors = ["Pierre Chevalier <pierrechevalier83@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bit-set = "0.5.2"
drawille = "0.3.0"
pathfinding = "3.0.5"
pico-args = "0.5.0"
sorted-vec = "0.7.0"
